# Tetanus

./: Cargo.toml  MVP_RELEASE.md  README.md
compiler/rustc_codegen_ssa/src/: base.rs
compiler/rustc_codegen_ssa/src/back/: linker.rs
compiler/rustc_codegen_tetanus/: Cargo.toml
compiler/rustc_codegen_tetanus/src/: lib.rs
compiler/rustc_codegen_tetanus/src/back/: elf_builder.rs  empty_elf.elf  lto.rs  main_elf.elf  mod.rs  write.rs
compiler/rustc_codegen_tetanus/src/codegen/: aot.rs  mod.rs
compiler/rustc_driver_impl/src/: lib.rs
compiler/rustc_interface/src/: passes.rs
compiler/rustc_metadata/src/: creader.rs
src/bootstrap/src/: lib.rs
src/bootstrap/src/core/build_steps/: compile.rs  vendor.rs
src/bootstrap/src/core/builder/: cargo.rs
src/bootstrap/src/core/config/toml/: rust.rs
src/tools/compiletest/src/: common.rs
